@@ -11,6 +11,7 @@
 	- Update traits_chars cache daily using Multi::Maintenance
 	- Toggle [spoiler] tag visibility with global setting rather than mouse-over
 	- Added "Add character" link to VN pages
+	- Added "Image ID" field to VN image uploader
 	- Cleaned up CSS code
 	- Bugfix: don't accidentally remove char traits when editing
 	- Bugfix: fixed possible SQL table name clash on history browser
